Implement upload service
